<resources>
    <string name="app_name">MobilEtiketV1.0</string>
    <string name="stok_ad">Stok adı:</string>
    <string name="birim_fiyat">Birim Fiyatı:</string>
    <string name="taks_fiyat">Taks. Fiyatı:</string>
    <string name="ind_fiyat">Satış Fiyatı:</string>
    <string name="sat_fiyat">Etiket Fiyatı:</string>
    <string name="beden">Beden:</string>
    <string name="stok_kodu">Stok Kodu:</string>
    <string name="barkod_no">Barkod numarası</string>
    <string name="etiketi_yaz">Etiketi Yazdır</string>
    <string name="magaza_adi">Mağaza Adı:</string>
    <string name="title_activity_printer_setting">PrinterSettingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>